<resources>
    <string name="app_name">LIBRI</string>

    /**
    * Cadastro de usuário
    **/

    <string name="user_registration_title">Cadastro De Usuário</string>

    <string name="user_registration_name">Nome</string>
    <string name="user_registration_surname">Sobrenome</string>
    <string name="user_registration_email">E-mail</string>
    <string name="user_registration_login">Login</string>
    <string name="user_registration_password">Senha</string>

    <string name="user_registration_button">Cadastrar</string>

    /**
    * Login de usuário
    **/

    <string name="user_login">Entrar</string>

    <string name="user_registration">Cadastre-se</string>

    /**
    * Cadastro de livro
    **/

    <string name="book_registration_title">Cadastro de Livro</string>


    <string name="book_registration_book_title">Título</string>
    <string name="book_registration_description">Descrição</string>
    <string name="book_registration_photo">Foto</string>

    <string name="book_registration_button">Cadastrar</string>

    /**
    * Toast
    **/

    <string name="fields_message">Todos os campos devem estar preenchidos!</string>
    <string name="user_registration_message_title">Criação de Usuário</string>
    <string name="create_user_message">Você está de cadastrando no app libri!</string>
    <string name="login_fail">Dados de login incorretos!</string>
    <string name="user_saved">Usuário criado com sucesso!</string>


    /**
    * Feed de Livro
    **/

    <string name="telaFeed">Feed</string>


    /**
    * Edição de Livro
    **/

    <string name="edicaoLivro">Edição de Livro</string>
    <string name="editarLivro">Editar</string>

    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>


</resources>