<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity_cadastro_usuario">

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_registration_title" />

        <EditText
            android:id="@+id/txtNome"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_registration_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtSobrenome"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_registration_surname"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEmail"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_registration_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtLogin"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/user_registration_login" />

        <EditText
            android:id="@+id/txtSenha"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_registration_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCadastrarUsuario"
            style="@style/butonForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_registration_button" />

    </LinearLayout>

</ScrollView>