<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity_cadastro_livro">

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edicaoLivro" />

        <EditText
            android:id="@+id/txtTitulo"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_registration_book_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtDescricao"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_registration_description"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtFoto"
            style="@style/editTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_registration_photo" />

        <Button
            android:id="@+id/btnEditarLivro"
            style="@style/butonForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarLivro" />

    </LinearLayout>

</ScrollView>